@@ -1,3 +1,8 @@
+2024-02-16  Dirk Eddelbuettel  <edd@debian.org>
+
+	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v4,
+	add r-ci-setup actions
+
 2023-11-16  Dirk Eddelbuettel  <edd@debian.org>
 
 	* inst/skel/R.gitignore: Added C++ entries from gitignore GH repo
